# pico-auth-lab

./: .gitignore  README.md
pc/: compile_flags.txt  run.sh
pc/src/: main.c
pico/: CMakeLists.txt  run.sh
pico/include/: challenge.h  device_id.h  hex.h  key_store.h  protocol.h  random.h  random_command.h  sha3.h  sha3_command.h
pico/src/: challenge.c  device_id.c  hex.c  main.c  protocol.c  random.c  random_command.c  sha3.c  sha3_command.c
